ros2_ws/log/build_2020-10-15_05-01-03/py_pubsub/stderr.log
  File "/home/shorouk/ros2_ws/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/publisher_member_function.py", line 13
    class MinimalPublisher(Node):
        ^
SyntaxError: invalid syntax

